--- a/apps/frontend/public/manifest.json
+++ b/apps/frontend/public/manifest.json
@@ -9,6 +9,36 @@
 	"description": "Track all facets of your life!",
 	"icons": [
 		{
+			"src": "/android-chrome-192x192.png",
+			"sizes": "192x192",
+			"type": "image/png"
+		},
+		{
+			"src": "/android-chrome-512x512.png",
+			"sizes": "512x512",
+			"type": "image/png"
+		},
+		{
+			"src": "/apple-touch-icon.png",
+			"sizes": "180x180",
+			"type": "image/png"
+		},
+		{
+			"src": "/apple-touch-icon-120x120.png",
+			"sizes": "120x120",
+			"type": "image/png"
+		},
+		{
+			"src": "/apple-touch-icon-precomposed.png",
+			"sizes": "180x180",
+			"type": "image/png"
+		},
+		{
+			"src": "/apple-touch-icon-120x120-precomposed.png",
+			"sizes": "120x120",
+			"type": "image/png"
+		},
+		{
 			"src": "/icon-192x192.png",
 			"sizes": "192x192",
 			"type": "image/png"
