--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -137,7 +137,7 @@ jobs:
           images: |
             name=ghcr.io/${{ github.repository }}
           tags: |
-            type=ref,event=pr,enable={{!is_default_branch}}
+            type=ref,event=pr
             type=semver,pattern=v{{version}},enable={{is_default_branch}}
             type=semver,pattern=v{{major}}.{{minor}},enable={{is_default_branch}}
             type=semver,pattern=v{{major}},enable={{is_default_branch}}
