--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,14 +4,5 @@
 	"service": "ryot-app",
 	"forwardPorts": [],
 	"workspaceFolder": "/workspaces/ryot",
-	"postCreateCommand": ". ${containerWorkspaceFolder}/.devcontainer/scripts/post-create.sh",
-	"remoteUser": "archlinux",
-	"remoteEnv": {
-		"GIT_AUTHOR_NAME": "${localEnv:GIT_AUTHOR_NAME}",
-		"GIT_AUTHOR_EMAIL": "${localEnv:GIT_AUTHOR_EMAIL}",
-		"GIT_COMMITTER_NAME": "${localEnv:GIT_COMMITTER_NAME}",
-		"GIT_COMMITTER_EMAIL": "${localEnv:GIT_COMMITTER_EMAIL}",
-		"VISUAL": "hx",
-		"EDITOR": "hx"
-	}
+	"remoteUser": "archlinux"
 }
