ci: test commit
Run CI.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,6 +40,7 @@ jobs:
           else
             echo "should-run=false" >> $GITHUB_OUTPUT
           fi
+          cat $GITHUB_OUTPUT
 
   build-frontend:
     needs: check-commit-message
