--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -184,7 +184,8 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: Dockerfile
-          platforms: linux/amd64,linux/arm64
           push: true
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          platforms: linux/amd64,linux/arm64
           tags: ${{ steps.meta.outputs.tags }}
