--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -167,12 +167,19 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Log in to the docker hub container registry
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
+
       - name: Extract metadata for Docker
         id: meta
         uses: docker/metadata-action@v5
         with:
           images: |
-            name=ghcr.io/${{ github.repository }}
+            name=${{ secrets.DOCKER_USERNAME }}/${{ github.repository.name }}
+            name=${{ env.GHCR_REGISTRY }}/${{ github.actor }}/${{ github.repository.name }}
           tags: |
             type=ref,event=pr
             type=semver,pattern=v{{version}},enable={{is_default_branch}}
@@ -180,7 +187,7 @@ jobs:
             type=semver,pattern=v{{major}},enable={{is_default_branch}}
             type=raw,value=develop,enable={{is_default_branch}}
 
-      - name: Build and push to ghcr
+      - name: Build and push
         uses: docker/build-push-action@v5
         with:
           context: .
