--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -178,8 +178,8 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: |
-            name=${{ secrets.DOCKER_USERNAME }}/${{ github.event.repository.name }}
             name=${{ env.GHCR_REGISTRY }}/${{ github.actor }}/${{ github.event.repository.name }}
+            name=${{ secrets.DOCKER_USERNAME }}/${{ github.event.repository.name }},enable={{is_default_branch}}
           tags: |
             type=ref,event=pr
             type=semver,pattern=v{{version}},enable={{is_default_branch}}
