--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,7 @@ jobs:
     outputs:
       should-run: ${{ steps.check.outputs.should-run }}
       should-release: ${{ steps.tag.outputs.should-release }}
+
     steps:
       - uses: actions/checkout@v4
         with:
@@ -49,6 +50,32 @@ jobs:
           else
             echo "should-release=false" >> $GITHUB_OUTPUT
           fi
+
+  create-release:
+    needs:
+      - pre-workflow-checks
+    if: needs.pre-workflow-checks.outputs.should-release == 'true'
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - name: Generate changelog
+        id: changelog
+        uses: metcalfc/changelog-generator@v4.1.0
+        with:
+          myToken: ${{ secrets.GITHUB_TOKEN }}
+      - name: Create Release
+        uses: softprops/action-gh-release@v1
+        with:
+          body: |
+            ## What's Changed
+            ${{ steps.changelog.outputs.changelog }}
+          draft: false
+          prerelease: false
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   build-frontend:
     needs: pre-workflow-checks
@@ -83,6 +110,7 @@ jobs:
       - pre-workflow-checks
       - build-frontend
     if: needs.pre-workflow-checks.outputs.should-run == 'true'
+    runs-on: ubuntu-latest
 
     strategy:
       fail-fast: false
@@ -92,8 +120,6 @@ jobs:
             command: cargo
           - target: aarch64-unknown-linux-gnu
             command: cross
-
-    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
@@ -128,7 +154,6 @@ jobs:
           git: https://github.com/cross-rs/cross
           rev: 19be83481fd3e50ea103d800d72e0f8eddb1c90c
           locked: false
-
       - name: Build
         env:
           APP_VERSION: ${{ steps.build.outputs.version }}
@@ -149,34 +174,29 @@ jobs:
       - pre-workflow-checks
       - build-backend
     if: needs.pre-workflow-checks.outputs.should-run == 'true'
-
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
       - name: Download build artifact for docker
         uses: actions/download-artifact@v4
         with:
           path: ${{ github.workspace }}/artifact/
-
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-
       - name: Log in to the ghcr container registry
         uses: docker/login-action@v3
         with:
           registry: ${{ env.GHCR_REGISTRY }}
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
-
       - name: Log in to the docker hub container registry
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
-
       - name: Extract metadata for Docker
         id: meta
         uses: docker/metadata-action@v5
@@ -190,7 +210,6 @@ jobs:
             type=semver,pattern=v{{major}}.{{minor}},enable={{is_default_branch}}
             type=semver,pattern=v{{major}},enable={{is_default_branch}}
             type=raw,value=develop,enable={{is_default_branch}}
-
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
