--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -209,6 +209,7 @@ jobs:
             type=semver,pattern=v{{major}}.{{minor}},enable={{is_default_branch}}
             type=semver,pattern=v{{major}},enable={{is_default_branch}}
             type=raw,value=develop,enable={{is_default_branch}}
+            type=raw,value=latest,enable=${{ needs.pre-workflow-checks.outputs.should-release == 'true' }}
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
