--- a/crates/enums/Cargo.toml
+++ b/crates/enums/Cargo.toml
@@ -1,20 +1,13 @@
 [package]
-name = "database"
+name = "enums"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-enums = { path = "../../crates/enums" }
 async-graphql = { workspace = true }
-indoc = "=2.0.5"
-nanoid = { workspace = true }
 schematic = { workspace = true }
 sea-orm = { workspace = true }
 sea-orm-migration = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 strum = { workspace = true }
-tracing = { workspace = true }
-
-[package.metadata.cargo-machete]
-ignored = ["serde_json", "tracing"]
