--- a/apps/backend/Cargo.toml
+++ b/apps/backend/Cargo.toml
@@ -24,7 +24,6 @@ config = { path = "../../libs/config" }
 convert_case = "=0.6.0"
 const-str = "=0.5.7"
 csv = "=1.3.0"
-database = { path = "../../libs/database" }
 data-encoding = "=2.6.0"
 derive_more = { version = "=1.0.0-beta.6", features = [
     "add",
@@ -45,6 +44,7 @@ itertools = "=0.13.0"
 jsonwebtoken = { version = "=9.3.0", default-features = false }
 lettre = "=0.11.7"
 markdown = "=1.0.0-alpha.18"
+migrations = { path = "../../crates/migrations" }
 mime_guess = "=2.0.5"
 nanoid = { workspace = true }
 openidconnect = "=3.5.0"
