refactor(common_models): new crate for common models

--- a/apps/backend/Cargo.toml
+++ b/apps/backend/Cargo.toml
@@ -19,6 +19,7 @@ boilermates = "=0.3.0"
 cached = { version = "=0.53.1", features = ["disk_store"] }
 chrono = { workspace = true }
 chrono-tz = "=0.9.0"
+common_models = { path = "../../crates/models/common" }
 compile-time = "=0.2.0"
 config = { path = "../../libs/config" }
 convert_case = "=0.6.0"
