--- a/crates/models/common/Cargo.toml
+++ b/crates/models/common/Cargo.toml
@@ -4,4 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+async-graphql = { workspace = true }
+schematic = { workspace = true }
+sea-orm = { workspace = true }
 serde = { workspace = true }
+serde_json = { workspace = true }
