--- a/crates/models/common/Cargo.toml
+++ b/crates/models/common/Cargo.toml
@@ -5,7 +5,9 @@ edition = "2021"
 
 [dependencies]
 async-graphql = { workspace = true }
+enum_meta = { workspace = true }
 schematic = { workspace = true }
 sea-orm = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
+strum = { workspace = true }
