--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ members = [
     "libs/rs-utils",
     "crates/models/common",
     "crates/services/file_storage",
+    "crates/models/database",
     "crates/models/fitness",
     "crates/models/media",
 ]
