chore(database_models): new library for all models

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ members = [
     "libs/config",
     "crates/migrations",
     "libs/rs-utils",
+    "crates/models",
     "crates/models/common",
     "crates/services/file_storage",
     "crates/models/database",
