--- a/crates/utils/Cargo.toml
+++ b/crates/utils/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "rs-utils"
+name = "utils"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-chrono = { workspace = true }
+common_utils = { path = "./common" }
