--- a/crates/utils/Cargo.toml
+++ b/crates/utils/Cargo.toml
@@ -4,4 +4,5 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+application_utils = { path = "./application" }
 common_utils = { path = "./common" }
