--- a/apps/backend/Cargo.toml
+++ b/apps/backend/Cargo.toml
@@ -13,14 +13,14 @@ askama = "0.12.1"
 async-graphql = { workspace = true }
 async-graphql-axum = "=7.0.7"
 async-trait = { workspace = true }
-axum = { version = "=0.7.5", features = ["macros", "multipart"] }
+axum = { workspace = true }
 aws-sdk-s3 = { workspace = true }
 boilermates = { workspace = true }
 cached = { version = "=0.53.1", features = ["disk_store"] }
 chrono = { workspace = true }
 chrono-tz = "=0.9.0"
 compile-time = "=0.2.0"
-config = { path = "../../libs/config" }
+config = { path = "../../crates/config" }
 convert_case = "=0.6.0"
 const-str = "=0.5.7"
 csv = "=1.3.0"
