fix(application_utils): use correct function

--- a/crates/utils/application/Cargo.toml
+++ b/crates/utils/application/Cargo.toml
@@ -8,3 +8,4 @@ async-graphql = { workspace = true }
 async-trait = { workspace = true }
 axum = { workspace = true }
 config = { path = "../../config" }
+jwt_service = { path = "../../services/jwt" }
