--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ members = [
     "crates/models",
     "crates/models/common",
     "crates/models/database",
+    "crates/models/dependent",
     "crates/models/fitness",
     "crates/models/media",
     "crates/services",
