--- a/crates/models/Cargo.toml
+++ b/crates/models/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 [dependencies]
 common_models = { path = "./common" }
 database_models = { path = "./database" }
+dependent_models = { path = "./dependent" }
 fitness_models = { path = "./fitness" }
 media_models = { path = "./media" }
