chore: more crates!!!

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ members = [
     "crates/services",
     "crates/services/file_storage",
     "crates/services/jwt",
+    "crates/traits",
     "crates/utils",
     "crates/utils/application",
     "crates/utils/common",
